# bandits-lea

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_validacao_rapida.ipynb  01_simulacao_e_visualizacoes.ipynb  02_poisson_recompensa_acumulada.ipynb
scripts/: run_poisson_simulation.py  run_simulation.py
src/bandit_inference/: __init__.py  analysis.py  analysis_poisson.py  environment.py  poisson_environment.py  simulation.py  simulation_poisson.py  visualization.py  visualization_poisson.py
src/bandit_inference/policies/: __init__.py  base.py  epsilon_greedy.py  greedy.py  poisson_thompson.py  poisson_ucb.py  random_policy.py  thompson.py  ucb.py
tests/: test_poisson_simulation.py  test_simulation.py
